syntax = "proto3";

option go_package = "./eCommerce";

// protos common.proto filedan import qilindi
import "protos/common.proto";



// The service definition.
service ClientsService {
    rpc Ping (Empty) returns (Pong) {}
    rpc CreateClients (CreateClientsRequest) returns (Clients) {}
    rpc UpdateClients (UpdateClientsRequest) returns (Clients) {}
    rpc DeleteClients (DeleteClientsRequest) returns (Clients) {}
    rpc GetClientsList (GetClientsListRequest) returns (GetClientsListResponse) {}
    rpc GetClientsById (GetClientsByIDRequest) returns (Clients) {} 

    rpc Login (LoginAuthRequest) returns (TokenResponse) {}
    rpc HasAccess (TokenRequest) returns (HasAccessResponse) {}

    rpc CreateSuperUser (CreateSudoRequest) returns (Clients) {}
}

message HasAccessResponse {
    Clients user = 1;
    bool has_access = 2;
}

message LoginAuthRequest {
    string username = 1;
    string password = 2;
}

message TokenResponse {
    string Token = 1;
}

message TokenRequest {
    string Token = 1;
}

// Clients ...
message Clients { 
    string id = 1;
    string firstname = 2;
    string lastname = 3;
    string username = 4;
    string phoneNumber = 5;
    string address = 6;
    string type =7;
    string password = 8;
    string created_at = 9;
    string updated_at = 10;
}

message CreateClientsRequest{
    string firstname = 1;
    string lastname = 2;
    string username = 3;
    string phoneNumber = 4;
    string address = 5;
    string type =6;
    string password = 7;
}


message CreateSudoRequest{
    string firstname = 1;
    string lastname = 2;
    string username = 3;
    string phoneNumber = 4;
    string address = 5;
    string type =6;
    string password = 7;
}


message UpdateClientsRequest{
    string id = 1;
    string phoneNumber = 2;
    string address = 3;
    string password = 4;
}

message DeleteClientsRequest{
    string id = 1;
}

message GetClientsListRequest{
    int32 offset = 1;
    int32 limit = 2;
    string search = 3;
}
message GetClientsListResponse{
    repeated Clients clientss = 1;
}

message GetClientsByIDRequest{
    string id =1;
}
